# serializer version: 1
# name: TestFind.test_basic
  dict({
    'counts': dict({
      'cancelled': dict({
        'build_index': 0,
        'create_sample': 0,
        'create_subtraction': 0,
        'nuvs': 1,
        'pathoscope': 0,
      }),
      'failed': dict({
        'build_index': 0,
        'create_sample': 0,
        'create_subtraction': 0,
        'nuvs': 0,
        'pathoscope': 0,
      }),
      'pending': dict({
        'build_index': 1,
        'create_sample': 0,
        'create_subtraction': 2,
        'nuvs': 0,
        'pathoscope': 1,
      }),
      'running': dict({
        'build_index': 0,
        'create_sample': 0,
        'create_subtraction': 0,
        'nuvs': 1,
        'pathoscope': 1,
      }),
      'succeeded': dict({
        'build_index': 0,
        'create_sample': 1,
        'create_subtraction': 2,
        'nuvs': 0,
        'pathoscope': 1,
      }),
    }),
    'found_count': 11,
    'items': list([
      dict({
        'created_at': str,
        'id': 11,
        'progress': 100,
        'state': 'succeeded',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'create_subtraction',
      }),
      dict({
        'created_at': str,
        'id': 10,
        'progress': 0,
        'state': 'pending',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'create_subtraction',
      }),
      dict({
        'created_at': str,
        'id': 9,
        'progress': 0,
        'state': 'pending',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'build_index',
      }),
      dict({
        'created_at': str,
        'id': 8,
        'progress': 100,
        'state': 'succeeded',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'create_subtraction',
      }),
      dict({
        'created_at': str,
        'id': 7,
        'progress': 100,
        'state': 'cancelled',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'nuvs',
      }),
    ]),
    'page': 1,
    'page_count': 3,
    'per_page': 5,
    'total_count': 11,
  })
# ---
# name: TestFind.test_state_invalid
  list([
    dict({
      'in': 'query string',
      'loc': list([
        'state',
        0,
      ]),
      'msg': "value is not a valid enumeration member; permitted: 'cancelled', 'failed', 'pending', 'running', 'succeeded'",
      'type': 'type_error.enum',
    }),
  ])
# ---
# name: test_cancel[None]
  dict({
    'args': dict({
    }),
    'claim': dict({
      'cpu': 1.0,
      'image': 'virtool/fake:latest',
      'mem': 1.0,
      'runner_id': 'fake-runner',
      'runtime_version': '0.0.0',
      'workflow_version': '0.0.0',
    }),
    'claimed_at': str,
    'created_at': str,
    'id': 1,
    'pinged_at': str,
    'progress': 100,
    'state': 'cancelled',
    'steps': None,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'pathoscope',
  })
# ---
# name: test_get[None]
  dict({
    'args': dict({
    }),
    'claim': dict({
      'cpu': 1.0,
      'image': 'virtool/fake:latest',
      'mem': 1.0,
      'runner_id': 'fake-runner',
      'runtime_version': '0.0.0',
      'workflow_version': '0.0.0',
    }),
    'claimed_at': str,
    'created_at': str,
    'id': 1,
    'pinged_at': str,
    'progress': 100,
    'state': 'failed',
    'steps': None,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'pathoscope',
  })
# ---
